# mtg-edh-tutor

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json
evals/: cases.py  graders.py  main.py  runner.py
evals/datasets/: atraxa_land_light.txt  krenko_ramp_light.txt
src/: config.py
src/cli/: main.py
src/deck/: __init__.py  models.py  parser.py
src/llm/: __init__.py  base.py  claude.py  ollama.py
src/scryfall/: __init__.py  client.py  models.py
src/tutor/: agent.py  analysis.py  cache.py  document.py  prompts.py  structured.py  tools.py
tests/: test_deck_parser.py  test_llm_facade.py  test_phase3.py  test_scryfall.py  test_tutor.py
tests/fixtures/: kumano_pings.txt  sample_deck.txt
