[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "mtg-edh-tutor"
version = "0.1.0"
description = "AI-powered EDH/Commander deck tutor"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "anthropic>=0.40",   # facade target; not used until ClaudeClient is activated
]

[project.scripts]
edh-tutor = "src.cli.main:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "respx>=0.21",   # httpx mocking
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
